--- a/src/html/pages/career.html
+++ b/src/html/pages/career.html
@@ -107,6 +107,30 @@
                       Python, Django.</p>
                     <p>Разработка backend части нового функционала системы с применением
                       Python, Django.</p>
+					  <ul>						
+							<p>Вам предстоит:</p>
+						<li>
+								 поиск и подбор персонала на позиции различного уровня сложности, в соответствии с утвержденными корпоративными стандартами: размещение вакансий, поиск резюме кандидатов, проведение телефонных интервью /первичных собеседований;
+						 </li>
+							<li>
+								 взаимодействие с руководителями подразделений для составления профиля кандидата, стратегии поиска и подбора, принятия решений по кандидату;
+						 </li>
+							<li>
+								 организация процесса адаптации новых сотрудников, выхода сотрудника на работу;
+						 </li>
+							<li>
+								 формирование описания должностей и должностных инструкций, поддержание должностных инструкций в актуальном состоянии;
+						 </li>
+							<li>
+								 мониторинг рынка труда и заработных плат;
+						 </li>
+							<li>
+								 организация и проведение аттестации персонала
+						 </li>
+							<li>
+								 участие в HR-проектах Компании.
+						 </li>
+						</ul>
                     <p>Разработка backend части нового функционала системы с применением
                       Python, Django.</p>
                   </div>
