--- a/src/html/pages/projects.html
+++ b/src/html/pages/projects.html
@@ -68,11 +68,16 @@
           <img src="@images/banner.png" alt="photo">
           <div class="container">
             <h2>
-              Полное технологическое оснащение школы нового поколения Полное технологическое оснащение школы нового
-              поколения Полное технологическое оснащение школы нового поколения
+				Создание комплексной системы безопасности на алмазодобывающих предприятиях ПАО"Алроса"
             </h2>
             <p>Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network (LoRaWAN) на
               предприятиях Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network
+              (LoRaWAN) на
+              предприятиях Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network
+              (LoRaWAN) на
+              предприятиях Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network
+              (LoRaWAN) на
+              предприятияхедприятиях Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network
               (LoRaWAN) на
               предприятиях Разработка проектных решений по развертыванию опорной сеть Low-power Wide-area Network
               (LoRaWAN) на
