--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -9,12 +9,14 @@
 			<div class="container">
 				<h1>
 					<span>ваш технологический партнер</span>
-					<span>
-						для внедрения <b>масштабных</b></span>
-					<strong>
-						<span>it-решений</span>
-						@@include('components/ui/_button-link.html', {href:'#', class: 'btn_secondary',children:'подробнее'})
-					</strong>
+					<div>
+						<span>для внедрения <b>масштабных</b></span>
+						<strong>
+							<span>it-решений</span>
+							@@include('components/ui/_button-link.html', {href:'#', class: 'btn_secondary',children:'подробнее'})
+						</strong>
+					</div>
+					
 				</h1>
 			</div>
 		</section>
