--- a/src/html/pages/documents.html
+++ b/src/html/pages/documents.html
@@ -23,7 +23,7 @@
     </section>
     <section class="documents">
       <div class="container">
-        <h2>Лицензии</h2>
+        <h2>Сертификаты</h2>
         <div class="documents__licenses swiper-component swiper-component_secondary swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
@@ -129,6 +129,39 @@
           </div>
           <div class="swiper-pagination"></div>
         </div>
+        <h2>Лицензии</h2>
+        <div class="documents__certificates">
+          <div class="documents__certificate">
+            <img src="@icons/file.svg" alt="file">
+            <div class="documents__certificate-text">
+              <h3>СИСТЕМА ДОБРОВОЛЬНОЙ СЕРТИФИКАЦИИ «СМК СТАНДАРТ»</h3>
+              <p>Сертификат соответствия №ST.RU.001.M0013685</p>
+            </div>
+          </div>
+          <div class="documents__certificate">
+            <img src="@icons/file.svg" alt="file">
+            <div class="documents__certificate-text">
+              <h3>СИСТЕМА ДОБРОВОЛЬНОЙ СЕРТИФИКАЦИИ «СМК СТАНДАРТ»</h3>
+              <p>Сертификат соответствия №ST.RU.001.M0013685</p>
+            </div>
+          </div>
+          <div class="documents__certificate">
+            <img src="@icons/file.svg" alt="file">
+            <div class="documents__certificate-text">
+              <h3>СИСТЕМА ДОБРОВОЛЬНОЙ СЕРТИФИКАЦИИ «СМК СТАНДАРТ»</h3>
+              <p>Сертификат соответствия №ST.RU.001.M0013685</p>
+            </div>
+          </div>
+          <div class="documents__certificate">
+            <img src="@icons/file.svg" alt="file">
+            <div class="documents__certificate-text">
+              <h3>СИСТЕМА ДОБРОВОЛЬНОЙ СЕРТИФИКАЦИИ «СМК СТАНДАРТ»</h3>
+              <p>Сертификат соответствия №ST.RU.001.M0013685</p>
+            </div>
+          </div>
+        </div>
+        @@include('components/ui/_button-link.html',
+        {href: '#',class: 'btn_secondary documents__show-more',children:'показать еще'})
       </div>
     </section>
   </main>
