--- a/src/html/pages/history.html
+++ b/src/html/pages/history.html
@@ -361,9 +361,13 @@
                   <div class="reviews-section__description">
                     <h3>Силантьев Олег</h3>
                     <span>Начальник отдела АСУ ТП компании IBM</span>
-                  </div> 
+                  </div>
                   <div class="reviews-section__logo">
                     <img src="@icons/logo-ibm.svg" alt="IBM">
+                  </div>
+                  <div class="reviews-section__additional-description">
+                    <span>Строительство дата центров
+                      и центра обработки данных (ЦОД)</span>
                   </div>
                 </div>
               </div>
@@ -378,13 +382,13 @@
                   <div class="reviews-section__description">
                     <h3>Силантьев Олег</h3>
                     <span>Начальник отдела АСУ ТП компании IBM</span>
-                  </div> 
-                    <div class="employees__history">
-                      <p>Я кардинально сменил профессию: из кадровых офицеров — в ИТ. Через год после этого пришел сюда на
-                        позицию системного администратора (TSS 2), через 2 года — стал тимлидом, еще через год — начал выполнять
-                        роль Service Operations Manager, далее возглавлял направление сервисного обслуживания и технической
-                        поддержки</p>
-                    </div>
+                  </div>
+                  <div class="employees__history">
+                    <p>Я кардинально сменил профессию: из кадровых офицеров — в ИТ. Через год после этого пришел сюда на
+                      позицию системного администратора (TSS 2), через 2 года — стал тимлидом, еще через год — начал выполнять
+                      роль Service Operations Manager, далее возглавлял направление сервисного обслуживания и технической
+                      поддержки</p>
+                  </div>
                 </div>
               </div>
             </div>
@@ -400,9 +404,9 @@
                 <div class="reviews-section__body">
                   <div class="reviews-section__description">
                     <h3>Сиразетдинов тимур</h3>
-                    <span>Эксперт по системам технической безопасности 
+                    <span>Эксперт по системам технической безопасности
                       и связи компании Dr. WEB</span>
-                  </div> 
+                  </div>
                   <div class="reviews-section__logo">
                     <img src="@images/drweb.png" alt="Dr. web">
                   </div>
@@ -418,15 +422,15 @@
                 <div class="reviews-section__body">
                   <div class="reviews-section__description">
                     <h3>Сиразетдинов тимур</h3>
-                    <span>Эксперт по системам технической безопасности 
+                    <span>Эксперт по системам технической безопасности
                       и связи компании Dr. WEB</span>
-                  </div> 
-                    <div class="employees__history">
-                      <p>Я кардинально сменил профессию: из кадровых офицеров — в ИТ. Через год после этого пришел сюда на
-                        позицию системного администратора (TSS 2), через 2 года — стал тимлидом, еще через год — начал выполнять
-                        роль Service Operations Manager, далее возглавлял направление сервисного обслуживания и технической
-                        поддержки</p>
-                    </div>
+                  </div>
+                  <div class="employees__history">
+                    <p>Я кардинально сменил профессию: из кадровых офицеров — в ИТ. Через год после этого пришел сюда на
+                      позицию системного администратора (TSS 2), через 2 года — стал тимлидом, еще через год — начал выполнять
+                      роль Service Operations Manager, далее возглавлял направление сервисного обслуживания и технической
+                      поддержки</p>
+                  </div>
                 </div>
               </div>
             </div>
