--- a/src/html/pages/media-detail.html
+++ b/src/html/pages/media-detail.html
@@ -93,6 +93,7 @@
             специалистами помогают школьникам получить реальное представление о профессии и сделать свой выбор.
             Экскурсии
             будут проводиться по предварительной заявке.</p>
+          <iframe src="https://www.youtube.com/embed/VAwofsCU8R8?si=QrFXjqHGO9qYnE46" frameborder="0" allow="fullscreen" loading="lazy"></iframe>
         </div>
       </div>
     </section>
