--- a/src/html/pages/career.html
+++ b/src/html/pages/career.html
@@ -26,6 +26,12 @@
     </section>
     <section class="numbers">
       <div class="container">
+        <div class="numbers__text">
+          <h2>Мы создаем технологии<span>технологии будущего</span> Мы создаем технологии Мы создаем технологии Мы создаем технологии
+          </h2>
+          <p>Повышение безопасности учебного кампуса за счет внедрения современной системы контроля доступа и
+            видеонаблюдения с функциями аналитики, возможностью записи звука и идентификации личности.</p>
+        </div>
         <div class="numbers__wrapper">
           <div class="numbers__item">
             <div class="numbers__number"><span>1178</span> +</div>
@@ -37,7 +43,7 @@
             <div class="numbers__description">сертифицированных инженеров и разработчиков</div>
           </div>
           <div class="numbers__item numbers__item_large">
-            <div class="numbers__number numbers__number_large"><span>35</span> лет</div>
+            <div class="numbers__number numbers__number_large"><span>35</span> +</div>
             <div class="numbers__description numbers__description_large">35 лет мы развиваем технологии в России и
               создаем
               решения, которыми
@@ -47,6 +53,99 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <section class="benefits">
+      <div class="container">
+        <h2>Бенефиты <span>Бенефиты</span> Бенефиты
+        </h2>
+        <div class="benefits__swiper swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="@icons/hands.svg" alt="photo">
+              <h4>Кафетерий
+                льгот</h4>
+              <p>Качественные бенефиты для улучшения жизни и здоровья сотрудников. Это фитнес, медицина, страхование, саморазвитие и обучение.</p>
+            </div>
+            <div class="swiper-slide">
+              <img src="@icons/toys.svg" alt="photo">
+              <h4>Корпоративные мероприятия</h4>
+              <p>Стратегические сессии, лекции, курсы, туристические походы и вечеринки — все, что нужно для расширения сети знакомств, усиления экспертизы и отдыха.</p>
+            </div>
+            <div class="swiper-slide">
+              <img src="@icons/comment.svg" alt="photo">
+              <h4>Система наставничества</h4>
+              <p>Рядом будет опытный эксперт, который будет поддерживать вас на этапе адаптации. Наставник поможет быстрее войти в рабочий ритм и успешно интегрироваться в команду.</p>
+            </div>
+            <div class="swiper-slide">
+              <img src="@icons/grow.svg" alt="photo">
+              <h4>Среда
+                для развития</h4>
+              <p>Большие возможности для комплексного развития своих навыков: вебинары с внешними экспертами, индивидуальные планы карьерного развития, корпоративный университет, а также корпоративная библиотека.</p>
+            </div>
+            <div class="swiper-slide">
+              <img src="@icons/table.svg" alt="photo">
+              <h4>Комфортные офисы
+                по всей стране</h4>
+              <p>Удобные офисы, где есть все, что нужно для работы.</p>
+            </div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
+    </section>
+    <section class="univercity">
+      <div class="container">
+        <div class="univercity__content">
+          <div class="univercity__title">
+            <img src="@images/ugntu.png" alt="logo">
+            <h2>Базовая кафедра<br>
+              <span>в IT-институте угнту</span>
+            </h2>
+          </div>
+          <div class="univercity__text">
+            <span>Готовим кадры в сотрудничестве с опорным вузом страны</span>
+            <p>Компания «Форт Диалог» выступила инициатором создания базовой кафедры «Интеллектуальные системы безопасности объектов ТЭК». Она открылась в 2023-2024 учебном году в составе кафедры «Автоматизация, телекоммуникация и метрология» (АТМ) при Институте цифровых систем, автоматизации и энергетики (IT-институте) Уфимского государственного нефтяного технического университета.
+              Программа обучения предусматривает занятия по дисциплинам «Общие принципы обеспечения технической безопасности на объектах ТЭК» и «Системы информационной безопасности».</p>
+            <p>Обучение проводят специалисты технического департамента «Форт Диалога», обладающие богатым опытом в реализации масштабных проектов на крупных промышленных предприятиях страны. Для проведения практики и лабораторных работ задействована ресурсная база компании: демонстрационные образцы новейшего оборудования от ведущих производителей, а также презентационный стенд программно-аппаратного комплекса «Протокол», который используется при построении ситуационных центров.</p>
+          </div>
+        </div>
+        <div class="univercity__swiper swiper-component swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="@images/look.png" alt="photo">
+            </div>
+            <div class="swiper-slide">
+              <img src="@images/office.png" alt="photo">
+            </div>
+            <div class="swiper-slide">
+              <img src="@images/joke.png" alt="photo">
+            </div>
+            <div class="swiper-slide">
+              <img src="@images/office.png" alt="photo">
+            </div>
+            <div class="swiper-slide">
+              <img src="@images/joke.png" alt="photo">
+            </div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
+    </section>
+    <section class="start">
+      <div class="container">
+        <h2>Твой старт ИТ-карьеры
+          <br>
+          <span>в престижной компанииафедра</span>
+        </h2>
+        <div class="start__text">
+          <p>Практика – это уникальная возможность получить ценный опыт работы в реальной среде, научиться новым навыкам и умениям,  а также получить рекомендации от опытных специалистов и создать свой профессиональный круг общения.</p>
+          <p>Если вы продемонстрируете свои навыки и проявите себя во время практики, мы оплатим вашу работу. А самые лучшие из вас могут стать частью нашей команды на постоянной основе!</p>
+          <p>Пришли нам свое резюме для прохождения практики,
+            и если у нас появятся задачи для тебя – мы с тобой свяжемся!</p>
+        </div>
+
+        <a class="link link_green-arrow" href="#">хочу на практику</a>
       </div>
     </section>
     <section class="career">
@@ -97,6 +196,7 @@
           <ul class="accordion__list">
             <li class="enumeration__item accordion__item">
               <div class="accordion__toggle">
+                <div class="enumeration__ancor" id="#first"></div>
                 <h3>Middle Python разработчик</h3>
                 <div class="accordion-icon"></div>
               </div>
@@ -141,6 +241,7 @@
             </li>
             <li class="enumeration__item accordion__item">
               <div class="accordion__toggle">
+                <div class="enumeration__ancor" id="#"></div>
                 <h3>Fullstack разработчик</h3>
                 <div class="accordion-icon"></div>
               </div>
@@ -157,6 +258,7 @@
             </li>
             <li class="enumeration__item accordion__item">
               <div class="accordion__toggle">
+                <div class="enumeration__ancor" id="#"></div>
                 <h3>Руководитель направления управления цепями поставок (IT)</h3>
                 <div class="accordion-icon"></div>
               </div>
@@ -173,6 +275,7 @@
             </li>
             <li class="enumeration__item accordion__item">
               <div class="accordion__toggle">
+                <div class="enumeration__ancor" id="#"></div>
                 <h3>Руководитель отдела внедрения (CPM, BI)</h3>
                 <div class="accordion-icon"></div>
               </div>
