--- a/src/html/pages/career.html
+++ b/src/html/pages/career.html
@@ -59,39 +59,40 @@
       <div class="container">
         <h2>Бенефиты <span>Бенефиты</span> Бенефиты
         </h2>
-        <div class="benefits__swiper swiper">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <img src="@icons/hands.svg" alt="photo">
-              <h4>Кафетерий
-                льгот</h4>
-              <p>Качественные бенефиты для улучшения жизни и здоровья сотрудников. Это фитнес, медицина, страхование, саморазвитие и обучение.</p>
-            </div>
-            <div class="swiper-slide">
-              <img src="@icons/toys.svg" alt="photo">
-              <h4>Корпоративные мероприятия</h4>
-              <p>Стратегические сессии, лекции, курсы, туристические походы и вечеринки — все, что нужно для расширения сети знакомств, усиления экспертизы и отдыха.</p>
-            </div>
-            <div class="swiper-slide">
-              <img src="@icons/comment.svg" alt="photo">
-              <h4>Система наставничества</h4>
-              <p>Рядом будет опытный эксперт, который будет поддерживать вас на этапе адаптации. Наставник поможет быстрее войти в рабочий ритм и успешно интегрироваться в команду.</p>
-            </div>
-            <div class="swiper-slide">
-              <img src="@icons/grow.svg" alt="photo">
-              <h4>Среда
-                для развития</h4>
-              <p>Большие возможности для комплексного развития своих навыков: вебинары с внешними экспертами, индивидуальные планы карьерного развития, корпоративный университет, а также корпоративная библиотека.</p>
-            </div>
-            <div class="swiper-slide">
-              <img src="@icons/table.svg" alt="photo">
-              <h4>Комфортные офисы
-                по всей стране</h4>
-              <p>Удобные офисы, где есть все, что нужно для работы.</p>
-            </div>
+
+      </div>
+      <div class="benefits__swiper swiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="@icons/hands.svg" alt="photo">
+            <h4>Кафетерий
+              льгот</h4>
+            <p>Качественные бенефиты для улучшения жизни и здоровья сотрудников. Это фитнес, медицина, страхование, саморазвитие и обучение.</p>
           </div>
-          <div class="swiper-pagination"></div>
+          <div class="swiper-slide">
+            <img src="@icons/toys.svg" alt="photo">
+            <h4>Корпоративные мероприятия</h4>
+            <p>Стратегические сессии, лекции, курсы, туристические походы и вечеринки — все, что нужно для расширения сети знакомств, усиления экспертизы и отдыха.</p>
+          </div>
+          <div class="swiper-slide">
+            <img src="@icons/comment.svg" alt="photo">
+            <h4>Система наставничества</h4>
+            <p>Рядом будет опытный эксперт, который будет поддерживать вас на этапе адаптации. Наставник поможет быстрее войти в рабочий ритм и успешно интегрироваться в команду.</p>
+          </div>
+          <div class="swiper-slide">
+            <img src="@icons/grow.svg" alt="photo">
+            <h4>Среда
+              для развития</h4>
+            <p>Большие возможности для комплексного развития своих навыков: вебинары с внешними экспертами, индивидуальные планы карьерного развития, корпоративный университет, а также корпоративная библиотека.</p>
+          </div>
+          <div class="swiper-slide">
+            <img src="@icons/table.svg" alt="photo">
+            <h4>Комфортные офисы
+              по всей стране</h4>
+            <p>Удобные офисы, где есть все, что нужно для работы.</p>
+          </div>
         </div>
+        <div class="swiper-pagination"></div>
       </div>
     </section>
     <section class="univercity">
@@ -110,26 +111,27 @@
             <p>Обучение проводят специалисты технического департамента «Форт Диалога», обладающие богатым опытом в реализации масштабных проектов на крупных промышленных предприятиях страны. Для проведения практики и лабораторных работ задействована ресурсная база компании: демонстрационные образцы новейшего оборудования от ведущих производителей, а также презентационный стенд программно-аппаратного комплекса «Протокол», который используется при построении ситуационных центров.</p>
           </div>
         </div>
-        <div class="univercity__swiper swiper-component swiper">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <img src="@images/look.png" alt="photo">
-            </div>
-            <div class="swiper-slide">
-              <img src="@images/office.png" alt="photo">
-            </div>
-            <div class="swiper-slide">
-              <img src="@images/joke.png" alt="photo">
-            </div>
-            <div class="swiper-slide">
-              <img src="@images/office.png" alt="photo">
-            </div>
-            <div class="swiper-slide">
-              <img src="@images/joke.png" alt="photo">
-            </div>
+
+      </div>
+      <div class="univercity__swiper swiper-component swiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="@images/look.png" alt="photo">
           </div>
-          <div class="swiper-pagination"></div>
+          <div class="swiper-slide">
+            <img src="@images/office.png" alt="photo">
+          </div>
+          <div class="swiper-slide">
+            <img src="@images/joke.png" alt="photo">
+          </div>
+          <div class="swiper-slide">
+            <img src="@images/office.png" alt="photo">
+          </div>
+          <div class="swiper-slide">
+            <img src="@images/joke.png" alt="photo">
+          </div>
         </div>
+        <div class="swiper-pagination"></div>
       </div>
     </section>
     <section class="start">
@@ -145,7 +147,7 @@
             и если у нас появятся задачи для тебя – мы с тобой свяжемся!</p>
         </div>
 
-        <a class="link link_green-arrow" href="#">хочу на практику</a>
+        <a class="link link_green-arrow" href="#career-section">хочу на практику</a>
       </div>
     </section>
     <section class="career">
