add video to career start

--- a/src/html/pages/career.html
+++ b/src/html/pages/career.html
@@ -138,7 +138,7 @@
       <div class="container">
         <h2>Твой старт ИТ-карьеры
           <br>
-          <span>в престижной компанииафедра</span>
+          <span>в престижной компании</span>
         </h2>
         <div class="start__text">
           <p>Практика – это уникальная возможность получить ценный опыт работы в реальной среде, научиться новым навыкам и умениям,  а также получить рекомендации от опытных специалистов и создать свой профессиональный круг общения.</p>
@@ -146,8 +146,10 @@
           <p>Пришли нам свое резюме для прохождения практики,
             и если у нас появятся задачи для тебя – мы с тобой свяжемся!</p>
         </div>
-
         <a class="link link_green-arrow" href="#career-section">хочу на практику</a>
+      </div>
+      <div class="start__video">
+        <video playsinline autoplay muted loop src="@videos/sample-5s.mp4"></video>
       </div>
     </section>
     <section class="career">
