feat: career-section_left

--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -269,7 +269,7 @@
 			@@include('components/ui/_button-link.html',
 			{href:'#', class: 'btn_secondary',children:'все проекты'})
 		</section>
-		<section class="career-section">
+		<section class="career-section career-section_left">
 			<video playsinline autoplay muted loop src="@videos/career-bg.mp4"></video>
 			<div class="container">
 				<h2>ваша успешная карьера в fort dialog </h2>
