update footer, add emplyees swiper

--- a/src/html/pages/career.html
+++ b/src/html/pages/career.html
@@ -111,7 +111,6 @@
             <p>Обучение проводят специалисты технического департамента «Форт Диалога», обладающие богатым опытом в реализации масштабных проектов на крупных промышленных предприятиях страны. Для проведения практики и лабораторных работ задействована ресурсная база компании: демонстрационные образцы новейшего оборудования от ведущих производителей, а также презентационный стенд программно-аппаратного комплекса «Протокол», который используется при построении ситуационных центров.</p>
           </div>
         </div>
-
       </div>
       <div class="univercity__swiper swiper-component swiper">
         <div class="swiper-wrapper">
@@ -152,10 +151,10 @@
         <video playsinline autoplay muted loop src="@videos/sample-5s.mp4"></video>
       </div>
     </section>
-    <section class="career">
-      <div class="container">
-        <div class="employees">
-          <div class="employees__card">
+    <section class="employees">
+      <div class="employees__swiper swiper">
+        <div class="swiper-wrapper">
+          <div class="employees__card swiper-slide">
             <img src="@images/oleg.png" alt="photo">
             <h3>Силантьев Олег</h3>
             <div class="employees__history">
@@ -167,7 +166,7 @@
             <span>Начальник отдела АСУ ТП
               компании Форт Диалог</span>
           </div>
-          <div class="employees__card">
+          <div class="employees__card swiper-slide">
             <img src="@images/timur.png" alt="photo">
             <h3>Сиразетдинов тимур</h3>
             <div class="employees__history">
@@ -176,7 +175,7 @@
             </div>
             <span>Эксперт по системам технической безопасности и связи компании «Форт Диалог»</span>
           </div>
-          <div class="employees__card">
+          <div class="employees__card swiper-slide">
             <img src="@images/oleg.png" alt="photo">
             <h3>Силантьев Олег</h3>
             <div class="employees__history">
@@ -193,6 +192,12 @@
               компании Форт Диалог</span>
           </div>
         </div>
+      </div>
+
+
+    </section>
+    <section class="career">
+      <div class="container">
         <h2>Лучшие вакансии<br>уже <span>ждут вас</span></h2>
         <p>«Форт Диалог» является крупным системным интегратором на территории РФ. Полноценное функционирование и
           стабильное развитие компании — заслуга исключительно работающих у нас сотрудников</p>
