--- a/src/html/pages/map.html
+++ b/src/html/pages/map.html
@@ -29,6 +29,7 @@
 			<li><a href="/404.html" class="link" target="_blank">404</a></li>
 			<li><a href="/privacy.html" class="link" target="_blank">Политика конфиденциаольности</a></li>
 			<li><a href="/success-page.html" class="link" target="_blank">Уведомление об успешной отправке формы</a></li>
+			<li><a href="/warranty.html" class="link" target="_blank">Сервис и гарантия</a></li>
 		</ol>
 
 		<h3 style="margin-bottom: 40px; text-transform: uppercase;">Разрезы</h3>
