change career bg video

--- a/src/html/pages/career.html
+++ b/src/html/pages/career.html
@@ -148,7 +148,7 @@
         <a class="link link_green-arrow" href="#career-section">хочу на практику</a>
       </div>
       <div class="start__video">
-        <video playsinline autoplay muted loop src="@videos/sample-5s.mp4"></video>
+        <video playsinline autoplay muted loop src="@videos/career.mp4"></video>
       </div>
     </section>
     <section class="employees">
